# virtual_exec

./: Cargo.toml  README.md
tests/: test_exec.rs
vir_py-rs-exec/: Cargo.toml
vir_py-rs-macro/: Cargo.toml
vir_py-rs-parser/: Cargo.toml
vir_py-rs-type/: Cargo.toml
vir_py-rs-type/src/: builtin.rs
vir_py-rs-type/tests/: base_test.rs
vir_py_rs_macro/tests/: macro_test.rs
vir_py_rs_parser/: Cargo.toml
vir_py_rs_parser/src/: error.rs  lib.rs  parser.rs  token.rs  tokenizer.rs
vir_py_rs_type/: Cargo.toml  full.rs
vir_py_rs_type/src/: base.rs  builtin.rs  error.rs  exec_ctx.rs  lib.rs  op.rs  op_impl.rs
vir_py_rs_type/src/ast/: core.rs
vir_py_rs_type/tests/: op_test.rs
virtual_exec_macro/: Cargo.toml  README.md
virtual_exec_parser/: Cargo.toml  README.md
virtual_exec_parser/src/: tokenizer.rs
virtual_exec_type/: Cargo.toml  README.md
virtual_exec_type/src/: exec_ctx.rs
virtual_exec_type/src/ast/: core.rs
