[package]
name = "vir_py-rs-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
vir_py-rs-type = { path = "../vir_py-rs-type" }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }